--- a/style.css
+++ b/style.css
@@ -6,12 +6,16 @@
 
 body {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .btnDarkmode {
     width: 40px;
+    top: 10px;
     height: 40px;
-    position: absolute;
+    position: fixed;
     right: 10px;
     padding: 10px;
     cursor: pointer;
@@ -39,8 +43,8 @@ body {
 }
 
 .Container .Items {
-    width: 300px;
-    margin: 16px;
+    width: 250px;
+    margin: 16px ;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -64,4 +68,8 @@ body {
 .Container .Items .btnContainer button {
     width: 100px;
     padding: 3px;
+}
+h1 {
+    text-align: center;
+    margin-top: 40px;
 }
